--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/librealsense2
-	previous = 
-	base = a8c3d45
+	previous = a8c3d45
+	base = 05e47cc
 	trim = 
 	trimbase = 
