--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/librealsense2
-	previous = 
-	base = ebdf6e7
+	previous = ebdf6e7
+	base = 1ed8986
 	trim = 
 	trimbase = 
