--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/librealsense2
-	previous = 
-	base = d21ec48
+	previous = d21ec48
+	base = 538f060
 	trim = 
 	trimbase = 
