--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/librealsense2
-	previous = 
-	base = 539f17b
+	previous = 539f17b
+	base = 8d66050
 	trim = 
 	trimbase = 
